<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/ScrollView01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:background="#ff2affe7">
<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.ATSoft.androidgame.app.OptionActivity"
                tools:ignore="contentDescription"
                android:background="#ff2affe7"
                android:gravity="top|center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_volume"
            android:id="@+id/textView" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:gravity="top|left"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:id="@+id/linearLayout">
        <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:id="@+id/seekBar" android:layout_weight="0.67" android:max="100" android:progress="100"/>
        <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/muteButton" android:layout_gravity="center_vertical" android:src="@drawable/sound"
                android:clickable="true" android:scaleType="centerInside"
                android:state_selected ="false"
                android:background="@drawable/_mute_button_selector" android:baselineAlignBottom="false"
                android:tint="#ff2115ff"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_music_source"
            android:id="@+id/textView2" android:layout_below="@+id/linearLayout" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:paddingTop="30dp"/>
    <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/textView2"
            android:layout_marginTop="10dp" android:id="@+id/radioGroupMusicSource"
            android:nestedScrollingEnabled="false">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn1_tex"
                android:id="@+id/radioButton_GAME"
                android:layout_marginLeft="30dp" android:layout_marginBottom="5dp"
                android:checked="true" android:clickable="true"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn2_text"
                android:id="@+id/radioButton_PLAYLIST"
                android:layout_marginLeft="30dp" android:layout_marginBottom="5dp"
                android:checked="false" android:clickable="true" />
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn3_text"
                android:id="@+id/radioButton_URL"
                android:layout_marginLeft="30dp" android:layout_marginBottom="5dp" android:checked="false"
                android:clickable="true"/>
    </RadioGroup>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/title_effects_volume"
              android:id="@+id/textView3"
              android:paddingTop="30dp"
              android:layout_below="@+id/radioGroupMusicSource" android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
        <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:id="@+id/seekBar2" android:layout_weight="1"/>
        <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/imageButton" android:clickable="true"/>
    </LinearLayout>
</RelativeLayout>
</ScrollView>